fixed mobile name spacing

--- a/styles.scss
+++ b/styles.scss
@@ -244,21 +244,24 @@ div.flex-right.toggleOn li {
 @media (max-width: 400px) {
     div.name-container .name{
         font-size: 3rem !important;
+        top: 60px !important;
 
-        #one {
-            top: 50px;
-            left: 50px;
-        }
-        
-        #two {
-            top: 150px;
-            left: 50px;
-        }
-        
-        #three {
-            top: 250px;
-            left: 50px;
-            color: red;
-        }
+
+    }
+
+    #one {
+        top: 100px !important;
+        left: 50px;
+    }
+    
+    #two {
+        top: 150px !important;
+        left: 50px;
+    }
+    
+    #three {
+        top: 200px !important;
+        left: 50px;
+        color: red;
     }
 }
